2012-11-24  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/55314
	Backport from trunk
	* resolve.c (resolve_allocate_deallocate):  Compare all
	subscripts when deciding if to reject a (de)allocate
	statement.

2012-09-13  Tobias Burnus  <burnus@net-b.de>

	PR fortran/54225
	PR fortran/53306
	* array.c (match_subscript, gfc_match_array_ref): Fix
	diagnostic of coarray's '*'.

2012-09-13  Tobias Burnus  <burnus@net-b.de>

	PR fortran/54556
	* resolve.c (gfc_impure_variable): Don't check gfc_pure such
	that the function also works for gfc_implicit_pure procedures.

2012-09-12  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/54208
	* simplify.c (simplify_bound_dim): Resolve array spec before
	proceeding with simplification.

2012-07-14  Mikael Morin  <mikael@gcc.gnu.org>

	Backport from trunk:
	2012-01-09  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/51758
	* trans-array.c (gfc_walk_elemental_function_args):
	Skip over NULL() actual arguments.

2012-06-14  Tobias Burnus  <burnus@net-b.de>

	PR fortran/53597
	* decl.c (match_attr_spec): Only mark module variables
	as SAVE_IMPLICIT for Fortran 2008 and later.

2012-06-05  Tobias Burnus  <burnus@net-b.de>

	PR fortran/50619
	* resolve.c (build_default_init_expr): Don't initialize
	ASSOCIATE names.

2012-06-01  Tobias Burnus  <burnus@net-b.de>

	PR fortran/53521
	* trans.c (gfc_deallocate_scalar_with_status): Properly
	handle the case size == 0.

2012-05-23  Tobias Burnus  <burnus@net-b.de>

	PR fortran/53389
	* trans-array.c (gfc_add_loop_ss_code): Don't evaluate
	expression, if ss->is_alloc_lhs is set.

2012-05-02  Tobias Burnus  <burnus@net-b.de>

	Backport from mainline
	2012-04-12  Tobias Burnus  <burnus@net-b.de>

	PR fortran/52864
	* expr.c (gfc_check_vardef_context): Fix assignment check for
	pointer components.

2012-03-10  Tobias Burnus  <burnus@net-b.de>

	PR fortran/52469
	* trans-types.c (gfc_get_function_type): Handle backend_decl
	of a procedure pointer.

2012-03-06  Tobias Burnus  <burnus@net-b.de>
