@@ -1,3 +1,9 @@
+2013-01-07  Steven G. Kargl  <kargl@gcc.gnu.org>
+	    Mikael Morin  <mikael@gcc.gnu.org>
+
+	PR fortran/55827
+	* gfortran.dg/use_22.f90: New test.
+
 2012-12-21  Martin Jambor  <mjambor@suse.cz>
 
 	PR tree-optimization/55355
